FO-1273 Contrast tool design fix

--- a/src/components/sidebar/icon-contrast-ratio.less
+++ b/src/components/sidebar/icon-contrast-ratio.less
@@ -1,7 +1,7 @@
 .icon-contrast-ratio-bar{
   position: absolute;
   width: 35px;
-  right:7.5px;
+  right:6px;
   bottom:3px;
   text-align: center;
 }
